containers and almost full functionality

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite App</title>
-        <link type="text/css" rel="stylesheet" href="../node_modules/video.js/dist/video-js.min.css" />
     </head>
     <body>
         <div id="app"></div>
         <script type="module" src="/src/main.js"></script>
-        <script src="../node_modules/video.js/dist/video.min.js"></script>
-        <script src="../node_modules/videojs-youtube/dist/Youtube.min.js"></script>
+        <script>
+            var tag = document.createElement("script");
+
+            tag.src = "https://www.youtube.com/iframe_api";
+            var firstScriptTag = document.getElementsByTagName("script")[0];
+            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+        </script>
     </body>
 </html>
