adding json file to pull in data

--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
+        <title>Wyatt's Music</title>
     </head>
     <body>
         <div id="app"></div>
         <script type="module" src="/src/main.js"></script>
-        <script>
-            var tag = document.createElement("script");
-
-            tag.src = "https://www.youtube.com/iframe_api";
-            var firstScriptTag = document.getElementsByTagName("script")[0];
-            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-        </script>
+        <script src="https://www.youtube.com/iframe_api"></script>
     </body>
 </html>
