more efficient parallax

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <div id="app"></div>
         <script type="module" src="/src/main.js"></script>
-        <script src="https://www.youtube.com/iframe_api"></script>
+        <script src="http://www.youtube.com/iframe_api"></script>
     </body>
 </html>
