--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <div id="app"></div>
+        <script src="https://www.youtube.com/iframe_api"></script>
+
         <script type="module" src="/src/main.js"></script>
-        <script src="http://www.youtube.com/iframe_api"></script>
     </body>
 </html>
